fix scrollbar

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -8,7 +8,7 @@
   }
 
   scrollbar-width: $scrollbar-width;
-  scrollbar-color: #0d141f #a62b6b;
+  scrollbar-color: #a62b6b #0d141f;
 
   &::-webkit-scrollbar-track {
     background: #0d141f;
